feat: integration of nevermined payments library

--- a/02-agents/devops/.env.example
+++ b/02-agents/devops/.env.example
@@ -4,3 +4,11 @@ XPANDER_AGENT_ID="{YOUR_XPANDER_AGENT_ID}"
 
 # ANTHROPIC_API_KEY="{YOUR_ANTHROPIC_API_KEY_IF_USING_ANTHROPIC}"
 # OPENAI_API_KEY="{YOUR_OPENAI_API_KEY_IF_USING_OPENAI}"
+
+# Nevermined Builder
+NVM_API_KEY="{BUILDER_NVM_API_KEY}"
+
+# Nevermined Subscriber. An agent builder would not need this. Here just for demo purposes
+NVM_SUBSCRIBER_API_KEY="{SUBSCRIBER_NVM_API_KEY}"
+NVM_PLAN_ID="{NVM_PLAN_ID}"
+NVM_AGENT_ID="{NVM_AGENT_ID}"
